--- a/testView.html
+++ b/testView.html
@@ -33,7 +33,7 @@
                 <button id="btn-stop-recording" disabled>Stop Recording</button>
             </div>
         <!-- <img class="testview-img" src="./img/girl.jpg" >     -->
-        <p class="testview-content-p">준비가 되셨다면<br><b>시작</b>버튼을 눌러 주세요</p>
+        <p class="testview-content-p">준비가 되셨다면<br><b>시작</b>버튼을 rrrr 눌러 주세요</p>
         <div class="header"></div>
         <div class="canvas-wrap">
             <canvas id="canvas"></canvas>
